# semantic-embeddings

./: .gitignore  README.md  pyproject.toml
sembeddings/: __init__.py  grace.py  rade.py  utils.py
sembeddings/measures/: __init__.py  correlation.py  qpp.py
