[project]
name = "semantic-embeddings"
version = "0.1.0"
description = "Package for creating rank-based semantic and contextual embeddings."
authors = [{ name="Thiago César Castilho Almeida", email="tc.almeida@unesp.br" },
{ name="Lucas Pascotti Valem", email="lucaspascottivalem@gmail.com" },
{ name="Daniel Carlos Guimarães Pedronette", email="pedronette@gmail.com" }]
license = {text = "GPL-2.0"}
readme = "README.md"
dependencies = [
  "numpy",
  "tqdm",
]
requires-python = ">=3.7"
keywords = ["semantic", "graph embedding", "dimensionality reduction", "ranking", "unsupervised learning"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"